alterada configuração de deploy. usando branch default.

--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.ufc.quixada.npi</groupId>
 	<artifactId>npi-core-api</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3</version>
 	<packaging>jar</packaging>
 	<name>npi-core-api</name>
 
 	<properties>
-	    <!-- github server corresponds to entry in ~/.m2/settings.xml -->
-	    <github.global.server>github</github.global.server>
+		<!-- github server corresponds to entry in ~/.m2/settings.xml -->
+		<github.global.server>github</github.global.server>
 
 		<javax.inject.version>1</javax.inject.version>
 		<!-- Generic properties -->
@@ -84,23 +84,45 @@
 				<version>0.10</version>
 				<configuration>
 					<message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
-					<noJekyll>true</noJekyll>                                  <!-- disable webpage processing -->
-					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
-					<branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
+					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
 					<includes>
 						<include>**/*</include>
 					</includes>
-					<repositoryName>npi-core-api</repositoryName>    <!-- github repo name -->
-					<repositoryOwner>npi-ufc-qxd</repositoryOwner>    <!-- github username -->
+					<repositoryName>npi-core-api</repositoryName>
+					<repositoryOwner>npi-ufc-qxd</repositoryOwner>
 				</configuration>
 				<executions>
-					<!-- run site-maven-plugin's 'site' target as part of the build's normal 
-						'deploy' phase -->
 					<execution>
 						<goals>
 							<goal>site</goal>
 						</goals>
 						<phase>deploy</phase>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
